Thank you for the hard lesson